Renamed docs folder to website. Improved readme.md.